--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,18 @@
 h1 {
   background: blue;
+  color: white;
   padding: 20px;
   margin-right: 20px;
   margin-left: 20px;
+  border-style: solid;
+  border-width: 10px;
+  border-color: red;
 }
 
 p {
   background: red;
+  color: whitesmoke;
+  border: 10px dotted blue;
   padding: 20px 40px 20px 50px;
   margin: 20px 50px;
 }
